@@ -9,11 +9,11 @@
   <parent>
     <groupId>org.microbean</groupId>
     <artifactId>microbean-pluginmanagement-pom</artifactId>
-    <version>18</version>
+    <version>21</version>
     <relativePath />
   </parent>
 
-  <name>microBean™ Type</name>
+  <name>microBean™ Bean</name>
   <description>microBean™ Bean: Utility classes for implementing beans.</description>
   <inceptionYear>2023</inceptionYear>
   <url>https://microbean.github.io/microbean-bean</url>
@@ -35,28 +35,28 @@
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-interceptor</artifactId>
-        <version>0.1.2</version>
+        <version>0.1.3</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-invoke</artifactId>
-        <version>0.0.15</version>
+        <version>0.0.16</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-lang</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <type>jar</type>
-    </dependency>
-      
+        <groupId>org.microbean</groupId>
+        <artifactId>microbean-lang</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <type>jar</type>
+      </dependency>
+
       <dependency>
         <groupId>org.microbean</groupId>
         <artifactId>microbean-qualifier</artifactId>
-        <version>0.2.2</version>
+        <version>0.2.3</version>
         <type>jar</type>
       </dependency>
 
@@ -99,14 +99,14 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.microbean</groupId>
       <artifactId>microbean-qualifier</artifactId>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.microbean</groupId>
       <artifactId>microbean-scope</artifactId>
@@ -143,8 +143,9 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
             <compilerArgs>
-              <arg>-Xlint:all</arg>
+              <arg>--enable-preview</arg>
               <arg>-Xlint:-preview</arg>
+              <arg>-Xlint:all</arg>
               <arg>-Xpkginfo:always</arg>
             </compilerArgs>
           </configuration>
@@ -160,13 +161,10 @@
           </configuration>
         </plugin>
         <plugin>
-          <artifactId>maven-scm-publish-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>--add-opens=org.microbean.bean/org.microbean.bean=ALL-UNNAMED</argLine>
+            <argLine>--enable-preview</argLine>
+            <!-- <argLine>-add-opens=org.microbean.bean/org.microbean.bean=ALL-UNNAMED</argLine> -->
             <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
             <!-- See https://github.com/apache/maven-surefire/blob/eb48f1b59ca5ccf6954ef33ecab03dbaf93214cd/surefire-providers/surefire-junit-platform/src/main/java/org/apache/maven/surefire/junitplatform/JUnitPlatformProvider.java#L242-L262 -->
             <properties>
@@ -176,6 +174,7 @@
               </configurationParameters>
             </properties>
             <systemPropertyVariables>
+              <org.microbean.lang.Lang.verbose>${org.microbean.lang.Lang.verbose}</org.microbean.lang.Lang.verbose>
               <project.build.directory>${project.build.directory}</project.build.directory>
               <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
             </systemPropertyVariables>
@@ -197,7 +196,7 @@
 
     <!-- maven-javadoc-plugin properties -->
     <detectJavaApiLink>false</detectJavaApiLink>
-    <links>https://docs.oracle.com/en/java/javase/17/docs/api,https://microbean.github.io/microbean-development-annotations/apidocs/</links>
+    <links>https://docs.oracle.com/en/java/javase/20/docs/api/</links>
 
     <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/ -->
     <goals>deploy,post-site,scm-publish:publish-scm</goals>
@@ -207,6 +206,8 @@
     <scmpublish.content>${project.reporting.outputDirectory}</scmpublish.content>
     <scmpublish.pubScmUrl>${project.scm.developerConnection}</scmpublish.pubScmUrl>
     <scmpublish.scm.branch>gh-pages</scmpublish.scm.branch>
+
+    <org.microbean.lang.Lang.verbose>false</org.microbean.lang.Lang.verbose>
 
   </properties>
 
